add routerlink to home and repohome pages.

--- a/src/app/repohome/repohome.component.css
+++ b/src/app/repohome/repohome.component.css
@@ -5,10 +5,9 @@
     padding: 12%;
     text-align: center;
     color: white;
-    
+}
 
-  }
-  .user{
+.repo {
     margin-bottom: 10%;
     padding: 2.5%;
     background: aqua;
@@ -17,4 +16,3 @@
     align-items: center;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
-  
