--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,9 @@
-<div class="container">
-    <h1>Welcome to <br> Github-Search Application</h1>
-    <p>This appplication allows you to search git-hub for the usernames of some of the people that have caught your eye lately. Dive in.</p>
+<link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Jura|Niconne|Russo+One|Viga" rel="stylesheet">
+<div class="container " >
+    <h1>Welcome to <br> Github-Search User</h1>
+    <p>This appplication allows you to search git-hub for the <br> usernames of some of the people that have caught your eye lately. Dive in.</p>
+    
     <div>
-      <button class="user btn-success"><a routerLink='/profile' routerLinkActive='active'>Search with UserName</a></button>
+      <button class="user"><a routerLink='/profile' routerLinkActive='active'>UserName</a></button>
     </div>
-    <div>
-      <button class btn btn-warning="repo btn-warning"><a routerLink='/repo' routerLinkActive='active'>search with repository name</a></button>
-    </div>
-    </div>
+</div>
