--- a/src/app/repohome/repohome.component.css
+++ b/src/app/repohome/repohome.component.css
@@ -1,10 +1,10 @@
 .container{
-    background-image: url("https://mdbootstrap.com/img/Photos/Others/img%20%2848%29.jpg");
+    background-image: url("https://www.indiewire.com/wp-content/uploads/2020/01/Night-on-Earth-Scorpions.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     padding: 12%;
     text-align: center;
-    color: white;
+    color: aqua;
 }
 
 .repo {
