--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,4 +9,14 @@
         <a class="nav-item nav-link" routerLink="/repohome">Git Repositories</a>
       </div>
     </div>
+<div class="col-md-3">
+   <nav class="nav navbar-nav  pull-xs-right">
+       <li class="nav-item">
+           <a class="nav-link" href="https://twitter.com/Nyangenya_Ralph"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>
+       </li>
+       <li class="nav-item">
+           <a class="nav-link" href="https://github.com/rmautia"><i class="fa fa-github" aria-hidden="true"></i> Github</a>
+       </li>
+   </nav>
+</div>
   </nav>
