--- a/src/app/home-form/home-form.component.html
+++ b/src/app/home-form/home-form.component.html
@@ -1,1 +1,18 @@
-<p>home-form works!</p>
+<div class=" col-md-6">
+
+            <form id="searchForm">
+                <!-- ngNoForm -->
+
+                <div class="form-group">
+
+                    <div class="input-group">
+                        <input type="text" name="username" class="form-control" placeholder="Enter A Github Username..." [(ngModel)]="github.userName"
+                            (keyup)="searchUser()">
+                        <div class="input-group-addon"><i class="fa fa-keyboard-o" aria-hidden="true"></i></div>
+                    </div>
+                </div>
+
+
+            </form>
+
+        </div>
