--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <h1>Welcome to <br> Github-Search User</h1>
     <p>This appplication allows you to search git-hub for the <br> usernames of some of the people that have caught your eye lately. Dive in.</p>
     
-    <div>
-      <button class="user"><a routerLink='/profile' routerLinkActive='active'>UserName</a></button>
+    <div class="col-md-6">
+      <app-home-form></app-home-form>
     </div>
 </div>
