--- a/src/app/home-form/home-form.component.html
+++ b/src/app/home-form/home-form.component.html
@@ -1,4 +1,4 @@
-<div class=" col-md-6">
+<div class=" col-md-12">
 
             <form id="searchForm">
                 <!-- ngNoForm -->
@@ -6,7 +6,7 @@
                 <div class="form-group">
 
                     <div class="input-group">
-                        <input type="text" name="username" class="form-control" placeholder="Enter A Github Username..." [(ngModel)]="github.userName"
+                        <input type="text" name="username" class="form-control" placeholder="Enter Github Username..." [(ngModel)]="github.userName"
                             (keyup)="searchUser()">
                         <div class="input-group-addon"><i class="fa fa-keyboard-o" aria-hidden="true"></i></div>
                     </div>
