--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" routerLink="/landing"><b>GitHub Search</b></a>
+    <a class="nav-link" href="https://github.com/rmautia"><i class="fa fa-github" aria-hidden="true"></i> Github Homepage</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" routerLink="/home">User Profile<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link active" routerLink="/home" aria-hidden="true">User Profile<span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" routerLink="/repohome">Git Repositories</a>
       </div>
     </div>
@@ -15,7 +15,7 @@
            <a class="nav-link" href="https://twitter.com/Nyangenya_Ralph"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>
        </li>
        <li class="nav-item">
-           <a class="nav-link" href="https://github.com/rmautia"><i class="fa fa-github" aria-hidden="true"></i> Github</a>
+           <a class="nav-link " href="https://github.com/rmautia"><i class="fa fa-github" aria-hidden="true"></i> Github</a>
        </li>
    </nav>
 </div>
