--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<home-form [github]= "github1"></home-form>
+<profile [github] ="github1"></profile>
