--- a/src/app/home-form/home-form.component.html
+++ b/src/app/home-form/home-form.component.html
@@ -1,4 +1,5 @@
-<div class=" col-md-12">
+<div class="bar">   
+    <div class=" col-md-12" >
 
             <form id="searchForm">
                 <!-- ngNoForm -->
@@ -14,4 +15,5 @@
 
 
             </form>
- </div>
+    </div>
+</div>
