--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,5 @@
 <div class="m-x-auto"  *ngIf="github.user == false && (github.userName && github.userName.length > 0)">
+    <ng-progress></ng-progress>
 
     <div class="starter-template text-xs-center">
         <h5>User Profile not found.</h5>
