--- a/src/app/repohome/repohome.component.html
+++ b/src/app/repohome/repohome.component.html
@@ -1,4 +1,5 @@
 <div class="container " >
+    <ng-progress></ng-progress>
     <h1>Welcome to <br> Github-Search Repository</h1>
     <p>This appplication allows you to search git-hub for the <br> Repositories of some of the people that have caught your eye lately. Dive in.</p>
     <div>
