--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Jura|Niconne|Russo+One|Viga" rel="stylesheet">
 <div class="container " >
+  <ng-progress></ng-progress>
     <h1>Welcome to <br> Github-Search User</h1>
     <p>This appplication allows you to search git-hub for the <br> usernames of some of the people that have caught your eye lately. Dive in.</p>
     
