--- a/src/app/home-form/home-form.component.html
+++ b/src/app/home-form/home-form.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row text-center align-items-center" >
     <div class="col-md-12">
         <form class="well">
             <div class="form-group">
