--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -35,7 +35,7 @@
             <h3 class="panel-title">User Repos</h3>
         </div>
         <div class="panel-body">
-            <div *ngFor="let repo of repos">
+            <div *ngFor="let repo of repo">
                   <div class="row">
                     <div class="col-md-9">
                         <h4><a target="_blank" href="{{repo.html_url}}">{{repo.name}}</a></h4> <a class="hover" (click)="readmeFun(repo.name)"> Readme </a>
