--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
-<home-form [github]= "github1"></home-form>
-<profile [github] ="github1"></profile>
+<div class="container-fluid">
+    <app-navbar></app-navbar>
+</div>
+<div class="container-fluid">
+    <router-outlet></router-outlet>
+</div>
+
