--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -32,7 +32,7 @@
     
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">User Repos</h3>
+            <h3 class="panel-title">User Repositories</h3>
         </div>
         <div class="panel-body">
             <div *ngFor="let repo of repo">
