--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<a class="hover" (click)="goSearch()"> Go To Search </a>
+<a class="hover bg-info" (click)="goSearch()" > Back To Search </a>
 <div *ngIf="user">
    <div class="panel panel-default">
         <div class="panel-heading">
@@ -8,14 +8,14 @@
             <div class="row">
                 <div class="col-md-4">
                     <img class="img-thumbnail" src="{{user.avatar_url}}">
-                    <a class="btn btn-default btn-block" target="_blank" href="{{user.html_url}}">View Profile</a>
+                    <a class="btn btn-default btn-block bg-success" target="_blank" href="{{user.html_url}}">View Profile</a>
                 </div>
                 <div class="col-md-8">
                     <div class="stats">
-                        <span class="label label-default">{{user.public_repos}} Public Repos</span>
-                        <span class="label label-primary">{{user.public_gists}} Public Gists</span>
-                        <span class="label label-success">{{user.followers}} Followers</span>
-                        <span class="label label-info">{{user.following}} Following</span>
+                        <span class="label label-default bg-info">{{user.public_repos}} Public Repos</span>
+                        <span class="label label-primary bg-danger">{{user.public_gists}} Public Gists</span>
+                        <span class="label label-success bg-warning">{{user.followers}} Followers</span>
+                        <span class="label label-info bg-primary">{{user.following}} Following</span>
                     </div>
                     <br>
                     <ul class="list-group">
@@ -42,9 +42,9 @@
                         <p>{{repo.description}}</p>
                     </div>
                     <div class="col-md-3">
-                        <span class="label label-default">{{repo.watchers}} Watchers</span>
-                        <span class="label label-primary">{{repo.forks}} Forks</span>
-                        <span class="label label-primary">{{repo.stargazers_count}} Stars</span>
+                        <span class="label label-default bg-info">{{repo.watchers}} Watchers</span>
+                        <span class="label label-primary bg-primary">{{repo.forks}} Forks</span>
+                        <span class="label label-primary bg-danger" >{{repo.stargazers_count}} Stars</span>
                     </div>  
                   </div>
                   <hr>
