btn layout and spacing.

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -12,10 +12,10 @@
                 </div>
                 <div class="col-md-8">
                     <div class="stats">
-                        <span class="label label-default bg-info">{{user.public_repos}} Public Repos</span>
-                        <span class="label label-primary bg-danger">{{user.public_gists}} Public Gists</span>
-                        <span class="label label-success bg-warning">{{user.followers}} Followers</span>
-                        <span class="label label-info bg-primary">{{user.following}} Following</span>
+                        <span class="btn btn-info" id="zzz">{{user.public_repos}} Public Repos</span>
+                        <span class="btn btn-danger" id="zzz">{{user.public_gists}} Public Gists</span>
+                        <span class="btn btn-warning" id="zzz">{{user.followers}} Followers</span>
+                        <span class="btn btn-primary" id="zzz">{{user.following}} Following</span>
                     </div>
                     <br>
                     <ul class="list-group">
@@ -42,9 +42,9 @@
                         <p>{{repo.description}}</p>
                     </div>
                     <div class="col-md-3">
-                        <span class="label label-default bg-info">{{repo.watchers}} Watchers</span>
-                        <span class="label label-primary bg-primary">{{repo.forks}} Forks</span>
-                        <span class="label label-primary bg-danger" >{{repo.stargazers_count}} Stars</span>
+                        <span class="btn btn-danger " id="zzz">{{repo.watchers}} Watchers  </span>
+                        <span class="btn btn-primary" id="zzz">{{repo.forks}} Forks  </span>
+                        <span class="btn btn-success" id="zzz">{{repo.stargazers_count}} Stars </span>
                     </div>  
                   </div>
                   <hr>
