add highlight feature to nav-links.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,10 +12,10 @@
 <div class="col-md-3">
    <nav class="nav navbar-nav  pull-xs-right">
        <li class="nav-item">
-           <a class="nav-link" id="kk" href="https://twitter.com/Nyangenya_Ralph"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>
+           <a appHighlight class="nav-link" id="kk" href="https://twitter.com/Nyangenya_Ralph"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>
        </li>
        <li class="nav-item">
-           <a class="nav-link " id="kk" href="https://github.com/rmautia"><i class="fa fa-github" aria-hidden="true"></i> Github</a>
+           <a appHighlight class="nav-link " id="kk" href="https://github.com/rmautia"><i class="fa fa-github" aria-hidden="true"></i> Github</a>
        </li>
    </nav>
 </div>
