--- a/src/app/home-form/home-form.component.html
+++ b/src/app/home-form/home-form.component.html
@@ -1,8 +1,8 @@
-<div class="row text-center align-items-center" >
+<div class="row" >
     <div class="col-md-12">
         <form class="well">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Enter Github Username and Press Enter" [(ngModel)]="userName" name="username" (keyup.enter)="searchUser()">   
+                <input type="text" class="form-control" placeholder="Enter UserName" [(ngModel)]="userName" name="username" (keyup.enter)="searchUser()">   
              </div>    
         </form>    
     </div>    
