--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -22,7 +22,8 @@
                         <li class="list-group-item"><strong>Location: </strong>{{user.location}}</li> 
                         <li class="list-group-item"><strong>Email: </strong>{{user.email}}</li> 
                         <li class="list-group-item"><strong>Blog: </strong>{{user.blog}}</li> 
-                        <li class="list-group-item"><strong>Member Since: </strong>{{user.created_at}}</li> 
+                        <li class="list-group-item"><strong>Member Since: </strong>{{user.created_at|date}}</li> 
+                        <li class="list-group-item"><strong>Created </strong>{{user.created_at|relativeTime}} days ago</li>
                     </ul>
                 </div>    
             </div>
