--- a/src/app/repohome/repohome.component.html
+++ b/src/app/repohome/repohome.component.html
@@ -1,8 +1,8 @@
 <div class="container " >
-    <ng-progress></ng-progress>
+  <ng-progress></ng-progress>
     <h1>Welcome to <br> Github-Search Repository</h1>
     <p>This appplication allows you to search git-hub for the <br> Repositories of some of the people that have caught your eye lately. Dive in.</p>
     <div>
-      <button class="repo"><a routerLink='/repo' routerLinkActive='active'>Repository</a></button>
+      <button class="repo"><a routerLink='/homeform' routerLinkActive='active'>UserName/Repo</a></button>
     </div>
 </div>
