--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="user">
+<div *ngIf="user" id="user">
    <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">{{user.name}}</h3>
