--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -38,7 +38,7 @@
             <div *ngFor="let repo of repo">
                   <div class="row">
                     <div class="col-md-9">
-                        <h4><a target="_blank" href="{{repo.html_url}}">{{repo.name}}</a></h4> <a class="hover" (click)="readmeFun(repo.name)"> Readme </a>
+                        <h4><a target="_blank" href="{{repo.html_url}}">{{repo.name}}</a></h4> <a class="hover" ></a>
                         <p>{{repo.description}}</p>
                     </div>
                     <div class="col-md-3">
