--- a/src/app/home-form/home-form.component.html
+++ b/src/app/home-form/home-form.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row"  >
     <div class="col-md-12">
         <form class="well">
@@ -6,4 +7,5 @@
              </div>    
         </form>    
     </div>    
+</div>
 </div>
