--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -6,3 +6,9 @@
     padding: 0.2%;
     color: black;
 }
+#user {
+    background-image: url("https://mdbootstrap.com/img/Photos/Others/img%20(42).jpg");
+    
+    
+}
+
