--- a/src/app/repohome/repohome.component.css
+++ b/src/app/repohome/repohome.component.css
@@ -16,3 +16,6 @@
     align-items: center;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
+  .form-control {
+      background-color: aqua;
+  }
