--- a/src/app/repohome/repohome.component.html
+++ b/src/app/repohome/repohome.component.html
@@ -2,7 +2,13 @@
   <ng-progress></ng-progress>
     <h1>Welcome to <br> Github-Search Repository</h1>
     <p>This appplication allows you to search git-hub for the <br> Repositories of some of the people that have caught your eye lately. Dive in.</p>
-    <div>
-      <button class="repo"><a routerLink='/homeform' routerLinkActive='active'>UserName/Repo</a></button>
-    </div>
+  <div class="row"  >
+      <div class="col-md-12">
+          <form class="well">
+              <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Enter UserName first" [(ngModel)]="userName" name="username" (keyup.enter)="searchUser()">   
+               </div>    
+          </form>    
+      </div>    
+  </div>
 </div>
