--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,7 +3,7 @@
         <div class="panel-heading">
             <h3 class="panel-title">{{user.name}}</h3>
         </div>
-        <div class="panel-body">
+        <div class="panel-body" id="ligrp">
             <div class="row">
                 <div class="col-md-4">
                     <img class="img-thumbnail" src="{{user.avatar_url}}">
